# public-wifi

./: .gitignore  AICONTEXT.md  APP_SPEC.md  CLAUDE.md  CMakeLists.txt  DECRYPTION.md  IMPROVEMENTS.md  MainWindow.cpp  MainWindow.h  MapView.cpp  MapView.h  README.md  RUNBOOK.md  ScreenPage.cpp  ScreenPage.h  TcpJsonLineServer.cpp  UI_DESIGN.md  build.bat  main.cpp  next-steps.md  package-release.ps1  releases.json
resources/: demo_events.json  regions.json  resources.qrc  services.json
scripts/: device_watch.sh  send_traffic_events.sh  sniff_payload.sh
src/: InitScreen.cpp  InitScreen.h  MainWindow.cpp  MainWindow.h  MapView.cpp  MapView.h  ScreenPage.cpp  ScreenPage.h  ShowConfig.h  TcpJsonLineServer.cpp  TcpJsonLineServer.h  WifiPortalServer.cpp  WifiPortalServer.h  main.cpp
src/cybershow/common/: CyberAppMode.cpp  CyberAppMode.h  CyberNavigationController.cpp  CyberNavigationController.h  CyberOperationalLog.cpp
src/cybershow/ui/: BottomNavBar.cpp  CyberBackgroundWidget.cpp  CyberBackgroundWidget.h  CyberTheme.cpp  CyberTheme.h  MetricCard.h
tools/polygon-editor/: CMakeLists.txt  MapCanvas.cpp  MapCanvas.h  PolygonEditor.cpp  PolygonEditor.h  editor_resources.qrc  main.cpp
tools/service-mapper/: CMakeLists.txt  ServiceMapper.cpp  ServiceMapper.h  main.cpp
